# kdl

./: .gitignore  CMakeLists.txt  README.md  libkdl
buildtool/: CMakeLists.txt
include/: Compiler.h  libkdl.h
include/backend/: CodeGenerator.h
include/backend/clang/: CLangCG.h  ClRuleCompiler.h
include/channels/: RulePool.h  rule.h  type.h
include/conditional/: ConditionalParser.h  ConditionalReferenceValidator.h  ConditionalTree.h
include/parser/: Combinator.h  CompilerMessage.h  ErrorPrinter.h  RuleParser.h  lex.h  parser.h  tokens.h
include/template/: Array.h
lib/: Compiler.cpp  libkdl.cpp  utils.cpp
lib/backend/clang/: CLangCG.cpp  ClRuleCompiler.cpp
lib/channels/: RulePool.cpp  rule.cpp
lib/conditional/: ConditionalParser.cpp  ConditionalReferenceValidator.cpp  ConditionalSemanticChecker.cpp  ConditionalTree.cpp
lib/parser/: Combinator.cpp  CompilerMessage.cpp  ErrorPrinter.cpp  RuleParser.cpp  lex.cpp  parser.cpp  tokens.cpp
src/: Compiler.cpp  Compiler.h  kdlc.cpp  kdlc.h  utils.cpp  utils.h
src/backend/: CodeGenerator.h
src/backend/clang/: CLangCG.cpp  CLangCG.h  ClRuleCompiler.cpp  ClRuleCompiler.h
src/channels/: RulePool.h  rule.cpp  rule.h  type.h
src/cli/: KdlOptions.cpp  KdlOptions.h  TerminalInterface.cpp  TerminalInterface.h
src/conditional/: ConditionalParser.cpp  ConditionalParser.h  ConditionalReferenceValidator.cpp  ConditionalReferenceValidator.h  ConditionalSemanticChecker.cpp  ConditionalSemanticChecker.h  ConditionalTree.cpp  ConditionalTree.h
src/parser/: Combinator.cpp  Combinator.h  CompilerMessage.cpp  CompilerMessage.h  RuleParser.cpp  RuleParser.h  lex.cpp  lex.h  parser.cpp  parser.h  tokens.cpp  tokens.h
src/search/: search.h
src/template/: Array.h
testloader/: CMakeLists.txt  testloader.win32.c
tests/: CMakeLists.txt  test.bnf  test.c  test.gen  test.h  test.kdl  test2.kdl
